# gm-qaoa

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.dev-config/: .flake8  .pydocstyle  .pylintrc  mypy.ini
.github/workflows/: pr-monitor.yml
experiments/: example.py  grover.ipynb  grover_tsp.ipynb  grover_tsp.py  qaoa.ipynb
experiments/configs/: config.yaml
src/: __init__.py  grover.py  tsp.py  utils.py
tests/: conftest.py  test_example.py  test_grover_class.py
